# music-bench

./: .gitignore  README.md  benchmark_config.toml  pyproject.toml
data/expanded/dev/: manifest.jsonl  split_info.json
data/expanded/dev/results/: anthropic-claude-opus-4-6.jsonl  anthropic-claude-opus-4-7.jsonl  anthropic-claude-sonnet-4-6.jsonl  google-gemini-2.5-flash.jsonl  google-gemini-3-flash-preview.jsonl  openai-gpt-5.4.jsonl  openai-gpt-5.5.jsonl
data/expanded/dev/sources/: dev-0000.ly  dev-0001.ly  dev-0002.ly  dev-0003.ly  dev-0004.ly  dev-0005.ly  dev-0006.ly  dev-0007.ly  dev-0008.ly  dev-0009.ly  dev-0010.ly  dev-0011.ly  dev-0012.ly  dev-0013.ly  dev-0014.ly  dev-0015.ly  dev-0016.ly  dev-0017.ly  dev-0018.ly  dev-0019.ly  dev-0020.ly  dev-0021.ly  dev-0022.ly  dev-0023.ly
data/expanded/public_test/: manifest.jsonl  split_info.json
data/expanded/public_test/results/: anthropic-claude-opus-4-6.jsonl  anthropic-claude-opus-4-7.jsonl  anthropic-claude-sonnet-4-6.jsonl  google-gemini-2.5-flash.jsonl  google-gemini-3-flash-preview.jsonl  openai-gpt-5.4.jsonl  openai-gpt-5.5.jsonl
data/expanded/public_test/sources/: public_test-0000.ly  public_test-0001.ly  public_test-0002.ly  (+45 more)
music_bench/: __init__.py  __main__.py
src/music_bench/: __init__.py  __main__.py  cli.py  config.py  evaluation.py  generator.py  lilypond.py  music.py  normalization.py  providers.py  reporting.py  schema.py  scoring.py  util.py
tests/: test_config.py  test_evaluation.py  test_generator.py  test_normalization.py  test_private_seed.py  test_providers.py  test_scoring.py
