[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-bench"
version = "0.1.0"
description = "Synthetic benchmark for LLM score reading from rendered sheet music"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = []
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
music-bench = "music_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
